# framework-tutorials

./: .gitignore  README.md
code-generator/: README.md  main.py  prompts.py  pyproject.toml  ui.json
code-generator/extensions/: style.css  templates.umd.js
code-generator/static/: custom.css  custom.js
finance-content-checker/: README.md  main.py  prompts.py  pyproject.toml  ui.json  utils.py
finance-content-checker/.wf/: components-page-0-c0f99a9e-5004-4e75-a6c6-36f17490b134.jsonl  components-root.jsonl
finance-content-checker/static/: custom.css
finance-dashboard/: .env.example  README.md  charts.py  daily_APPLE.csv  daily_IBM.csv  earnings-data.json  main.py  prompts.py  pyproject.toml  stock_data.py  ui.json
finance-dashboard/.wf/: components-page-0-c0f99a9e-5004-4e75-a6c6-36f17490b134.jsonl  components-root.jsonl  metadata.json
finance-dashboard/static/: custom.css
financial-tools-chat/: .env.example  README.md  chat_tools.py  earnings-data.json  earnings-prompt.txt  main.py  prompts.py  pyproject.toml
financial-tools-chat/.wf/: components-page-0-c0f99a9e-5004-4e75-a6c6-36f17490b134.jsonl  components-root.jsonl
financial-tools-chat/static/: custom.css  custom.js
hacker-news-social-listener/: .env.example  .gitignore  README.md  main.py  prompts.py  pyproject.toml
hacker-news-social-listener/.wf/: components-page-0-c0f99a9e-5004-4e75-a6c6-36f17490b134.jsonl  components-root.jsonl  components-workflows_root.jsonl  metadata.json
hacker-news-social-listener/static/: custom.css  custom.js  hackernews_comments.csv  hackernews_posts.csv
hf-spaces-starter/: Dockerfile  README.md
localized-promo-dashboard/: README.md  main.py  prompts.py  pyproject.toml  ui.json
localized-promo-dashboard/data/: default_segments.csv  segments.csv
palmyra-comparison/: main.py
palmyra-comparison/.wf/: components-page-0-c0f99a9e-5004-4e75-a6c6-36f17490b134.jsonl  components-root.jsonl  components-workflows_workflow-0-lfltcky7l1fsm6j2.jsonl  metadata.json
palmyra-comparser/: .env.example  pyproject.toml
palmyra-comparser/static/: custom.css
patient-portal/: README.md  main.py  prompts.py  ui.json
pd-embedded-chat/: README.md  main.py  ui.json
pd-embedded-chat/static/: beverage-descriptions.csv  candy-descriptions.csv
pdp-generator/: README.md  main.py  prompts.py  ui.json
pdp-generator/data/: output-html.html
portfolio-rebalance/: README.md  main.py  prompts.py  pyproject.toml  ui.json
portfolio-rebalance/example_data/: portfolio_data.xlsx
prescribing-info-app/: .env.example  README.md  main.py  prompts.py  pyproject.toml  utils.py
prescribing-info-app/.wf/: components-page-0-c0f99a9e-5004-4e75-a6c6-36f17490b134.jsonl  components-page-1-181cq1mpgw34i8dl.jsonl  components-root.jsonl  metadata.json
prescribing-info-app/static/: custom.css
products-description-generator/: README.md  html_template.py  main.py  prompts.py  pyproject.toml  ui.json
products-description-generator/data/: output-html.html  running_shoes.xlsx
products-description-generator/static/: custom.css
release-notes-generator/: README.md
release-notes-generator/end/: main.py  prompts.py  pyproject.toml  ui.json
release-notes-generator/end/data/: output-html.html
release-notes-generator/end/static/: custom.css
release-notes-generator/start/: html_template.py  main.py  pyproject.toml  ui.json
release-notes-generator/start/sample-input/: test-data.csv
release-notes-generator/start/static/: custom.css
